# laminate

./: .gitignore  CHANGELOG.md  Cargo.toml  DESIGN.md  FEATURES.md  LICENSE-APACHE  LICENSE-MIT  README.md  deny.toml
.github/workflows/: ci.yml
examples/: api_consumption.rs  basic_extraction.rs  csv_etl.rs  medical_data.rs  schema_inference.rs  type_detection.rs
laminate/: Cargo.toml
laminate-cli/: Cargo.toml
laminate-cli/src/: main.rs
laminate-derive/: Cargo.toml
laminate-derive/src/: expand.rs  lib.rs  tool_def.rs
laminate-sql/: Cargo.toml
laminate-sql/src/: lib.rs  mysql.rs  postgres.rs  sqlite.rs
laminate-sql/tests/: iteration_57_sqlite_boolean.rs  iteration_58_sqlite_json_text.rs  iteration_59_sqlite_scale.rs  iteration_96_sqlite_json_detection.rs  sqlite_tests.rs
laminate/benches/: core.rs
laminate/examples/: api_consumption.rs  basic_extraction.rs  csv_etl.rs  medical_data.rs  schema_inference.rs  type_detection.rs
laminate/src/: coerce.rs  detect.rs  diagnostic.rs  error.rs  lib.rs  mode.rs  path.rs  registry.rs  schema.rs  value.rs
laminate/src/packs/: currency.rs  geo.rs  identifiers.rs  medical.rs  mod.rs  time.rs  units.rs
laminate/src/provider/: anthropic.rs  mod.rs  ollama.rs  openai.rs
laminate/src/streaming/: anthropic.rs  mod.rs  openai.rs  sse.rs
laminate/testdata/: randomuser_mixed.json  swapi_people.json  usgs_earthquakes.json
laminate/testdata/api-responses/: anthropic_text.json  anthropic_tool_use.json  messy_rest_api.json  ollama_response.json  openai_text.json  openai_tool_calls.json
laminate/testdata/config/: app_config_messy.json
laminate/testdata/corpus/: .gitignore
laminate/testdata/corpus/api-shapes/: jsonplaceholder_comments_50.json  rest_countries_all.json  rest_countries_europe.json  usgs_earthquakes_100.json
laminate/testdata/corpus/coercion/: gauntlet.json
laminate/testdata/corpus/coordinates/: gauntlet.json
laminate/testdata/corpus/currencies/: gauntlet.json
laminate/testdata/corpus/dates/: gauntlet.json
laminate/testdata/corpus/derive-stress/: complex_objects.json
laminate/testdata/corpus/identifiers/: validation_suite.json
laminate/testdata/corpus/medical/: fhir_observation_sample.json  lab_values.json
laminate/testdata/corpus/providers/: response_gauntlet.json
laminate/testdata/corpus/schema-inference/: challenge_sets.json  field_level.json
laminate/testdata/corpus/streaming/: sse_gauntlet.json
laminate/testdata/corpus/type-detection/: ground_truth.json
laminate/testdata/corpus/units/: gauntlet.json
laminate/testdata/countries/: multi.json
laminate/testdata/dates/: ambiguous_dates.json
laminate/testdata/ecommerce/: order.json
laminate/testdata/etl/: csv_as_json.json  inconsistent_types.json  schema_drift.json
laminate/testdata/eventsource/: events.json
laminate/testdata/financial/: transactions.json
laminate/testdata/gaming/: save_data.json
laminate/testdata/github-api/: events.json  repo.json
laminate/testdata/government/: tax_records.json
laminate/testdata/graphql/: response_with_errors.json
laminate/testdata/healthcare/: hl7_fhir_patient.json
laminate/testdata/iot/: telemetry.json
laminate/testdata/kubernetes/: deployment.json
laminate/testdata/logging/: structured_logs.json
laminate/testdata/protocols/: rdp_capabilities.json
laminate/testdata/scientific/: sensor_readings.json
laminate/testdata/spacex/: latest_launch.json
laminate/testdata/supply-chain/: product_catalog.json
laminate/testdata/webhooks/: github_push.json  stripe_payment.json
laminate/tests/: derive_tests.rs  detect_tests.rs  domain_tests.rs  edge_case_tests.rs  expanded_domain_tests.rs  fixture_tests.rs  integration_scaffolding_test.rs  iter114_probe.rs  iteration_100_openai_roundtrip.rs  iteration_101_set_path_conflicts.rs  iteration_102_merge_diagnostics.rs  iteration_103_stream_concurrent_tools.rs  iteration_104_audit_coercible_accuracy.rs  iteration_105_required_override.rs  iteration_106_currency_eu_no_decimal.rs  iteration_107_unit_eu_thousands.rs  iteration_108_coerce_european_numbers.rs  iteration_109_vec_diagnostics.rs  iteration_110_derive_vec_diagnostics.rs  iteration_111_apostrophe_thousands.rs  iteration_112_merge_structural.rs  iteration_113_derive_multiple_missing.rs  iteration_114_temperature_conversion.rs  iteration_115_unece_codes.rs  iteration_116_merge_stress.rs  iteration_116_pack_size.rs  iteration_117_audit_stress.rs  iteration_117_pokeapi.rs  iteration_119_source_hint_exact.rs  iteration_120_invalid_lat.rs  iteration_121_lab_same_unit.rs  iteration_122_pack_exact.rs  iteration_123_csv_pack_none.rs  iteration_124_leap_year.rs  iteration_125_detect_cc.rs  iteration_129_json_hint.rs  iteration_132_vat_detect.rs  iteration_141_cross_pack.rs  iteration_148_hl7.rs  iteration_160_pharma.rs  (+246 more)
