[package]
name = "laminate-sql"
version = "0.1.0"
edition = "2021"
rust-version = "1.85"
authors = ["Greg Lamberson <greg@lamco.io>"]
description = "Database connectors for laminate — PostgreSQL, SQLite, MySQL data sources"
license = "MIT OR Apache-2.0"
repository = "https://github.com/lamco-admin/laminate"
homepage = "https://lamco.ai"
documentation = "https://docs.rs/laminate-sql"
keywords = ["laminate", "database", "sql", "data-source", "etl"]
categories = ["database", "encoding"]
exclude = ["/tests/"]

[badges]
maintenance = { status = "actively-developed" }

[features]
default = []
postgres = ["sqlx/postgres"]
sqlite = ["sqlx/sqlite"]
mysql = ["sqlx/mysql"]
all-databases = ["postgres", "sqlite", "mysql"]

[dependencies]
laminate = { path = "../laminate", version = "0.1.0", features = ["schema"] }
async-trait = "0.1"
serde_json = "1"
thiserror = "2"
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "json"] }
tokio = { version = "1", features = ["rt"] }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
